crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__multi_alternative_label_optional_prefix_context.snap
---
source: crates/antlr-rust-codegen/src/generator/tests.rs
expression: "rendered_context_impl(&rendered, \"OptionalPrefixContext\")"
---
        rule unary_children: many(UnaryContext[4]),
        token num_token: required(14, "NUM"),
