crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__multi_alternative_label_shadowed_context.snap
---
source: crates/antlr-rust-codegen/src/generator/tests.rs
expression: shadowed_context
---

    pub fn unary(&self) -> Result<UnaryContext<'a>, MissingChildError> {
        __rule_children(self.__node, 4)
            .next()
            .map(|node| UnaryContext::__from_child_node(node, self.__invocation_states.as_deref()))
            .ok_or_else(|| MissingChildError::new("ShadowedContext", "unary"))
    }
    pub fn plus_tokens(&self) -> impl Iterator<Item = TerminalNode<'a>> + '_ {
        __token_children(self.__node, 11).map(TerminalNode::new)
    }
}

#[allow(dead_code, clippy::all)]
impl<'a> ShadowedContext<'a, ValidatedTreeContext> {
    pub fn unary(&self) -> UnaryContext<'a, ValidatedTreeContext> {
        let Some(node) = __rule_children(self.__node, 4).next() else {
            unreachable!("validated ShadowedContext is missing required child unary")
        };
        UnaryContext::<ValidatedTreeContext>::__from_validated_child_node(
            node,
            self.__invocation_states.as_deref(),
        )
    }
    pub fn plus_tokens(&self) -> impl Iterator<Item = TerminalNode<'a>> + '_ {
        __token_children(self.__node, 11).map(TerminalNode::new)
    }
}
