crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__parser_parse_convenience.snap
---
source: crates/antlr-rust-codegen/src/generator/tests.rs
expression: "render_parser_parse_convenience(\"TParser\", \"T\")"
---
antlr4_runtime::__antlr4_rust_parser_entry_points! {
    parser: TParser,
    output: TParserParseOutput,
    validated_tree: TValidatedTree,
    validation_error: TValidationError,
    validate_tree: validate_tree_structure,
}
