crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__parser_token_and_rule_constants_share_the_module_namespace.snap
---
source: crates/antlr-rust-codegen/src/generator/tests.rs
expression: rendered
---
pub const EOF: i32 = antlr4_runtime::TOKEN_EOF;
pub const RULE_FOO: i32 = 1;
pub const RULE_FOO_2: usize = 0;
