crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__parses_supported_predicate_helpers.snap
---
source: crates/antlr-rust-codegen/src/generator.rs
assertion_line: 21131
expression: parsed
---
[
    (
        "invoke:true",
        Some(
            Invoke {
                value: true,
            },
        ),
    ),
    (
        "invoke:false",
        Some(
            Invoke {
                value: false,
            },
        ),
    ),
    (
        "parser_property_call",
        Some(
            True,
        ),
    ),
    (
        "literal_true",
        Some(
            True,
        ),
    ),
    (
        "zero_eq_zero",
        Some(
            True,
        ),
    ),
    (
        "zero_ne_zero",
        Some(
            False,
        ),
    ),
    (
        "val_equals",
        Some(
            LocalIntEquals {
                value: 2,
            },
        ),
    ),
    (
        "raw_local_int_le",
        Some(
            LocalIntLessOrEqual {
                value: 5,
            },
        ),
    ),
    (
        "foreign_predicate",
        None,
    ),
    (
        "foreign_context_check",
        None,
    ),
]
