crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__render_forced_adaptive_decisions_manifest.snap
---
source: crates/antlr-rust-codegen/src/generator/tests.rs
expression: manifest
---
{
  "version": 2,
  "fixedLookahead": null,
  "grammars": [
    {
      "name": "T",
      "summary": {
        "total": 2,
        "ll1": 1,
        "fixed": 0,
        "adaptive": 1
      },
      "decisions": [
        {
          "decision": 0,
          "rule": "expr",
          "state": 15,
          "canDefer": true,
          "tier": "ll1"
        },
        {
          "decision": 1,
          "rule": "expr",
          "state": 19,
          "canDefer": true,
          "tier": "adaptive",
          "reason": "precedence",
          "probedLookahead": 0
        }
      ]
    }
  ]
}
